@@ -12,7 +12,7 @@ endif
 include /usr/share/quilt/quilt.make
 
 name = globus-common
-version = 15.30
+version = 15.31
 soname = 0
 
 INSTALLDIR = $(CURDIR)/debian/tmp
