@@ -6,7 +6,7 @@
 
 Name:		globus-common
 %global _name %(tr - _ <<< %{name})
-Version:	15.30
+Version:	15.31
 Release:	1%{?dist}
 Summary:	Globus Toolkit - Common Library
 
@@ -211,6 +211,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_docdir}/%{name}-%{version}/html/*
 
 %changelog
+* Wed Jul 29 2015 Globus Toolkit <support@globus.org> - 15.31-1
+- Fix in-tree run of GRAM tests by not having Config.pm in the perl5lib dir
+
 * Fri Jun 05 2015 Globus Toolkit <support@globus.org> - 15.30-1
 - Make globus-version executable during build time
 
