@@ -1,3 +1,9 @@
+globus-common (15.31-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix in-tree run of GRAM tests by not having Config.pm in the perl5lib dir
+
+ -- Globus Toolkit <support@globus.org>  Wed, 29 Jul 2015 16:17:20 -0400
+
 globus-common (15.30-1+gt6.@distro@) @distro@; urgency=low
 
   * Make globus-version executable during build time
